Atualização dos codigos, incluindo o swagger close #16
