# api/app.js
@@ -9,13 +9,21 @@ app.use(express.json());
 app.use(express.urlencoded({ extended: false }));
 app.use(cookieParser());
 
-//Db Connection
+
 const conn = require("./db/config")
 
 conn()
 
-// Routes
+
 const routes = require("./routes/router")
+
+const AmigosRouter = require('./routes/AmigosRoutes')
+
+const swaggerRouter = require('./routes/router_apidocs');
+
+app.use(swaggerRouter)
+
+app.use('/Amigos', AmigosRouter)
 
 app.use("/api", routes)
 
